<resources>
    <string name="app_name">StickyNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_want_to_delete_selected_notes">You want to delete selected notes</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="what_are_you_thinking">What are you thinking..🤔</string>
    <string name="sticky_note_color">Sticky Note Color</string>
    <string name="font_color">Font Color</string>
    <string name="save">Save</string>
    <string name="edit_your_sticky_note">Edit Your Sticky Note</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="lock_note">Lock note</string>
    <string name="note_color">Note Color</string>
    <string name="save_updates">Save Updates</string>
    <string name="lock">Lock</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="open">Open</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_password">Enter password</string>
</resources>